<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="130sp"
        android:orientation="horizontal"
        android:layout_marginLeft="35sp"
        android:layout_marginRight="35sp">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="40sp"
            android:textSize="25sp"
            android:textColor="@color/backgroundImagePicker"
            android:textAllCaps="true"
            android:text="@string/welcome_page"
            android:textStyle="normal|bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/age_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30sp"
        android:textColor="@color/backgroundImagePicker"
        android:text="@string/age_group"
        android:textSize="30sp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/age_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/age_6years"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/backgroundImagePicker"
            android:textAlignment="center"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/transparent"/>

        <Button
            android:id="@+id/age_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/backgroundImagePicker"
            android:text="@string/age_12years"
            android:textAlignment="center"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/transparent"/>

        <Button
            android:id="@+id/age_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/backgroundImagePicker"
            android:textAlignment="center"
            android:text="@string/age_16years"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/transparent"/>

        <Button
            android:id="@+id/age_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/age_40years"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/backgroundImagePicker"
            android:textAlignment="center"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/backgroundImagePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/venue_title"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tournamentVenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundImagePicker"
            android:textAlignment="center"
            android:text="@string/venue_address"
            android:textStyle="bold"
            android:linksClickable="true"/>

    </LinearLayout>

</RelativeLayout>