<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/completed_header"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/backgroundImagePicker"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/completed_message"/>

    <TextView
        android:textColor="@color/backgroundImagePicker3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/email_address_completed"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/completed_footer"
        android:textColor="@color/backgroundImagePicker"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/completed_message1"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="300sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="center_vertical|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/home_button"
            style="?android:buttonBarButtonStyle"
            android:layout_marginTop="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="20sp"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/close"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:textStyle="bold"
            android:text="@string/close_button"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</LinearLayout>