<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/review_page"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:textColor="@color/backgroundImagePicker"/>

            <TextView
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/backgroundImagePicker3"
                android:text="@string/selected_profile_picture"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="120sp"
                android:layout_height="140sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/desc"/>

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/email_address"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3"/>

                <TextView
                    android:id="@+id/etitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/first_name"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3"/>

                <TextView
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/last_name"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3"/>

                <TextView
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:id="@+id/home_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_address"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3" />

                <TextView
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:id="@+id/selected_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/selected_gender"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3"/>

                <TextView
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/contact_number"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3" />

                <TextView
                    android:id="@+id/number_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:id="@+id/emergency_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/emergency_contact_number"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3" />

                <TextView
                    android:id="@+id/number_value1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:id="@+id/certificate_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/backgroundImagePicker3"
                    android:text="@string/selected_certificate_picture"
                    android:textAlignment="center"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/certificate"
                    android:layout_width="120sp"
                    android:layout_height="140sp"
                    android:layout_marginTop="5sp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/desc"/>

                <TextView
                    android:id="@+id/gamesSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundImagePicker3"
                    android:text="@string/selected_games"/>

                <TextView
                    android:id="@+id/SelectedAgeGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:textSize="25sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"
                    android:background="@color/colorTranslucent"/>

                <TextView
                    android:id="@+id/checkboxValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/agree_to_terms_and_policies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/backgroundImagePicker"
                    android:text="@string/agree_to_terms"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginLeft="60sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="90sp"
                    android:layout_height="60sp"
                    android:layout_gravity="right"
                    android:layout_marginTop="20sp"
                    android:layout_marginLeft="80sp"
                    android:layout_marginBottom="20sp"
                    android:text="@string/submit_button"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/button_bg"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>